--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
+
+:root {
+    --fontePadrao: Arial, Verdana, Helvetica, sans-serif;
+    --fonteNunito: Nunito, sans-serif;
+}
 
 * {
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--fonteNunito);
 }
 
 nav {
@@ -12,12 +18,18 @@ nav {
     align-items: center;
     background-color: #fff;
     color: #000;
+    font-family: var(--fonteNunito);
+    font-weight: 400;
 }
 
 nav > a {
     text-decoration: none;
     cursor: pointer;
-    margin: 1rem;
+    margin: 0.5rem;
+}
+
+h2 {
+    font-weight: 700;
 }
 
 .banner {
@@ -28,8 +40,13 @@ nav > a {
 }
 
 .banner-left {
+    display: flex;
     background-color: #000;
     width: 50%;
+    font-size: 2rem;
+    font-weight: 700;
+    justify-content: center;
+    align-items: center;
 }
 
 .banner-left > p {
@@ -40,10 +57,14 @@ nav > a {
     color: #E9BF33;
 }
 
-
+.underlined-text {
+    text-decoration: underline;
+    text-decoration-color: #E9BF33;
+    margin-left: 0.75rem;
+}
 
 .banner-right {
-    background-color: blue;
+    background-color: #000;
     width: 50%;
 }
 
@@ -61,6 +82,8 @@ nav > a {
 }
 
 .card {
+    display: flex;
+    flex-direction: column;
     background-color: #f2f2f2;
     padding: 5px;
     margin: 8px;
@@ -69,15 +92,18 @@ nav > a {
 }
 
 .buy-button {
+    align-self: center;
     padding: 10px;
     margin-top: 0.5rem;
     background-color:
     #00E676;
     color: #fff;
     border-radius: 10px; 
+    width: 50%;
 }
 
 aside {
+    text-align: center;
     margin-top: 2rem;
     background-color: #f2f2f2;
     padding-bottom: 2rem;
@@ -106,6 +132,7 @@ footer {
     color: #fff;
     justify-content:space-around;
     align-items: center;
+    padding: 1rem;
 }
 
 .location {
@@ -121,6 +148,7 @@ footer {
     display:flex;
     flex-direction: column;
     justify-content: space-between;
+    font-weight: 600;
 }
 
 .contacts .support-button {
