--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ nav > a:hover {
     transform: scale(1.1);
 }
 
+.search-bar {
+    padding: 0.25rem;
+}
+
 .search-btn {
     border: none;
     background-color: #fff;
@@ -68,6 +72,11 @@ h4 {
     align-items: center;
 }
 
+.banner-right {
+    background-color: #000;
+    width: 50%;
+}
+
 .banner-left > p {
     margin: auto;
 }
@@ -82,11 +91,6 @@ h4 {
     margin-left: 0.75rem;
 }
 
-.banner-right {
-    background-color: #000;
-    width: 50%;
-}
-
 .banner-image {
     width: 100%;
     height: 100%;
@@ -96,8 +100,7 @@ h4 {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 1rem;
-    
+    margin-top: 1rem; 
 }
 
 .card {
@@ -151,6 +154,8 @@ aside {
 
 .promo > input {
     margin: 1rem;
+    padding: 1rem;
+    border: none;
 }
 
 .submit-button {
@@ -200,4 +205,34 @@ footer {
     padding: 1rem;
     border: none;
     cursor: pointer;
+}
+
+@media (max-width: 767px) {
+    .banner-left {
+        width: 0%;   
+    }
+    
+    .banner-right {
+        background-color: #000;
+        width: 100%;
+    }
+    .card-container {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        width: 100vw;
+    }
+    .promo {
+        width: 100vw;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+    .submit-button {
+        width: 35%;
+    }
+    footer {
+        width: 100vw;
+        flex-direction: column;
+    }
 }
